fix: font atualizada

--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -1,9 +1,7 @@
 .timer {
     padding: 50px;
-    font-size: 5em;
-    font-family: "Dela Gothic One", sans-serif;
-    font-weight: 350;
-    font-style: normal;
+    font-size: 6em;
+    font-family: 'Akira Expanded'
 }
 
 .timer_cro {
