--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,21 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/* Responsividade */
+@media (max-width: 768px) {
+  body {
+    @apply text-[1em];
+  }
+  
+  header {
+    @apply left-[10px] top-[5px] w-[calc(100%-20px)];
+  }
+  
+  button {
+    @apply px-[1em] py-[0.5em];
+  }
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
