--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,19 @@ footer p {
   color: #2e2e2e;
 }
 
+.active {
+  background-color: #fff;
+  color: black;
+  border: 1px solid black;
+}
 
+.link-reset {
+  color: inherit;
+  text-decoration: none;
+  all: unset;
+  cursor: pointer;
+  font-family: brant;
+}
 
 body {
   margin: 0;
