--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'Akira Expanded';
-  src: url('../fonts/Akira\ Expanded\ Demo.otf') format('opentype');
+  src: url('../fonts/AkiraExpandedDemo.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
