--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -4,6 +4,14 @@
     font-family: 'Akira Expanded'
 }
 
+/* .timer {
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  padding: 50px;
+font-size: 6em;
+} */
+
 .timer_cro {
     padding: 50px;
     font-size: 6em;
