--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -1,21 +1,50 @@
 .timer {
-    padding: 50px;
+    padding: 50px 0;
     font-size: 6em;
     font-family: 'Akira Expanded'
 }
 
-/* .timer {
-  font-family: "Rajdhani", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  padding: 50px;
-font-size: 6em;
-} */
-
 .timer_cro {
-    padding: 50px;
+    padding: 50px 0;
     font-size: 6em;
     font-family: "Rajdhani", sans-serif;
     font-weight: 700;
     font-style: normal;
+}
+
+button {
+  margin: 0 10px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+button:hover {
+  border-color: #ffffff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (max-width: 550px) {
+  .timer, .timer_cro {
+    padding: 15px 0;
+  font-size: 4em;
+}
+
+button {
+  /* margin: 0 5px;
+  padding: 8px 20px; */
+  margin: 0 10px;
+  padding: 10px 13px;
+  font-size: 1.1rem;
+}
 }
